--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,5 @@
 {
-  "presets" : ["es2015", "react"],
-  "plugins": [
-    [
-      "react-require"
-    ],
-    [
-      "transform-object-rest-spread"
-    ],
-    [
-      "transform-async-to-module-method",
-      {
-        "module": "bluebird",
-        "method": "coroutine"
-      }
-    ]
+  "presets": [
+    "react-app"
   ]
 }
